--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <table class="calculator">
         <h2 ><b>Calculator</b></h2>
         <tr>
-            <td colspan="3"> <input class="display-box" type="text" id="result" disabled /> </td>
+            <td colspan="3"> <input class="display-box" type="text" id="result" placeholder="0"/> </td>
 
             <!-- clearScreen() function clears all the values -->
             <td> <input type="button" value="C" onclick="clearScreen()" id="btn" /> </td>
